--- a/models/poisson_thinned_exclusion.qmd
+++ b/models/poisson_thinned_exclusion.qmd
@@ -120,7 +120,7 @@ build_stan_vector  <-  function(merged_data){
 # import stan model
 library(cmdstanr)
 
-stan_model <- cmdstan_model("poisson_thinned_exclusion.stan")
+stan_model <- cmdstan_model("poisson_thinned_exclusion_w_priors.stan")
 stan_model$print()
 ```
 
@@ -224,11 +224,35 @@ Rerunning the same model but with the x's in the logit.
 
 ```{r}
 # load stan model with x in logit
-stan_model_x_in_logit <- cmdstan_model("poisson_thinned_exclusion_x_logit.stan")
+stan_model_x_in_logit <- cmdstan_model("poisson_thinned_exclusion_x_logit_subset.stan")
+
+# I need to modify the data transformation as STAN now takes additional inputs.
+build_stan_vector_logit_2 <-  function(merged_data, pr_var = 1, logit_features = c("median_annual_incomeE", "poor_fam_propE")){
+    list(
+        N_obs = merged_data |> filter(!BLL_geq_5_suppressed) |> count() |> pull(n),
+        N_cens = merged_data |> filter(BLL_geq_5_suppressed) |> count() |> pull(n),
+        K = length(features),
+        L = 2, # number of features in logit
+        y_obs = merged_data |> filter(!BLL_geq_5_suppressed) |> pull(BLL_geq_5),
+        x_obs = merged_data |> filter(!BLL_geq_5_suppressed) |> select(all_of(features)) |> as.matrix(),
+        x_cens = merged_data |> filter(BLL_geq_5_suppressed) |> select(all_of(features)) |> as.matrix(),
+        w_obs = merged_data |> filter(!BLL_geq_5_suppressed) |> select(logit_features) |> as.matrix(),
+        w_cens = merged_data |> filter(BLL_geq_5_suppressed) |> select(logit_features) |> as.matrix(),
+        z_obs = merged_data |> filter(!BLL_geq_5_suppressed) |> pull(ped_per_100k),
+        z_cens = merged_data |> filter(BLL_geq_5_suppressed) |> pull(ped_per_100k),
+        kids_obs = merged_data |> filter(!BLL_geq_5_suppressed) |> pull(under_yo5_pplE),
+        kids_cens = merged_data |> filter(BLL_geq_5_suppressed) |> pull(under_yo5_pplE),
+        # get suppression bound 
+        ell = merged_data |> filter(BLL_geq_5_suppressed) |> pull(ell),
+        nhanes_prior_var = pr_var
+    )
+}
+
+stan_vector_md_2 <- build_stan_vector_logit_2(md_final)
 
 # sample
 fit_md_x_logit <- stan_model_x_in_logit$sample(
-  data = stan_vector_md,
+  data = stan_vector_md_2,
   seed = 1234,
   chains = 4, 
   parallel_chains = 4,
@@ -245,7 +269,7 @@ get_coefficients(fit_md_x_logit) |>
 plot_betas(fit_md_x_logit, title = "Posterior distributions for MD with x in logit")
 ```
 
-Similar to the simulation from learn_bayes we see that the uncertainty is greater, and that there appears to be some identification issues.
+Similar to the simulation from learn_bayes we see that the uncertainty is greater, and that there appears to be some identification issues, in particular in the variables that are also added to the logit side.
 
 ### NH (zero suppression)
 
